--- a/src/App.css
+++ b/src/App.css
@@ -1,31 +1,52 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@500&family=Noto+Sans+TC:wght@500&family=Roboto:wght@300&family=Work+Sans:wght@300;400&display=swap');
+
 .App {
   text-align: center;
+ /* border:2px solid green; */
+ height:100vh;
 }
+
+  .App::-webkit-scrollbar {
+    display: none;
+  }
+  
+
 
 .App-logo {
-  height: 40vmin;
+  height:100px;
+  width:170px;
+ 
+
+
   pointer-events: none;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+p{
+  font-size: 50px;
+  font-weight: bolder;
 }
+
+
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #ff5a5f;
+  height: 92vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+   padding-top: 50px;
   font-size: calc(10px + 2vmin);
-  color: white;
+  font-family: 'Noto Sans KR', sans-serif;
+  color:white ;
+  
+}
+.App-header::-webkit-scrollbar {
+  display: none;
 }
 
+
 .App-link {
-  color: #61dafb;
+  color: white;
+  text-decoration: none;
+  font-weight:600;
 }
 
 @keyframes App-logo-spin {
@@ -35,4 +56,9 @@
   to {
     transform: rotate(360deg);
   }
+}
+.paragraph{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
